# oaslananka-_-notebooklm-mcp-pro

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  security-insights.yml  sonar-project.properties
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/prepare-workspace/: action.yml
.github/workflows/: cflite_batch.yml  ci.yml  codeql.yml  dependency-review.yml  docs.yml  e2e.yml  pr-title.yml  release-sign.yml  release.yml  scorecard.yml  security.yml  zizmor.yml
deploy/: Dockerfile  docker-compose.yml  fly.toml  railway.json
deploy/k8s/: deployment.yaml  secret.yaml.example
docs/: ARCHITECTURE.md  OSPS_BASELINE.md  QUALITY_SCORE.md  ROADMAP.md  TECH_DEBT.md  THREAT_MODEL.md  changelog.md  configuration.md  contributing.md  index.md  release-verification.md  security.md
docs/api/: index.md
docs/deployment/: docker.md  fly.md  index.md  kubernetes.md  railway.md  self-hosted.md
docs/getting-started/: authentication.md  installation.md  quickstart.md
docs/integrations/: chatgpt.md  claude-desktop.md  claude-web.md  cursor.md  vscode.md
docs/tools/: admin.md  artifacts.md  catalog.md  chat.md  compat.md  language.md  notebooks.md  research.md  sources.md
fuzz/: README.md  config_fuzzer.py
scripts/: check_arch_boundaries.py  check_no_branding.py  fuzz_smoke.py  list_tools.py  smoke.sh
src/nlm_mcp/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  openapi.py  server.py
src/nlm_mcp/auth/: __init__.py  middleware.py  oauth.py  token.py
src/nlm_mcp/backend/: __init__.py  client.py  exceptions.py  retry.py  tasks.py
src/nlm_mcp/prompts/: __init__.py  meeting_to_podcast.py  paper_deep_dive.py  study_pack.py  summarize_research.py
src/nlm_mcp/resources/: __init__.py  artifact.py  notebook.py
src/nlm_mcp/tools/: __init__.py  admin.py  artifacts.py  chat.py  common.py  compat.py  language.py  models.py  notebooks.py  research.py  sources.py
src/nlm_mcp/transport/: __init__.py  stdio_runner.py
stubs/: atheris.pyi
tests/: test_bootstrap.py  test_cli.py
tests/e2e/: test_full_flow.py
tests/integration/: test_stdio_smoke.py
tests/unit/: test_auth.py  test_backend_client.py  test_backend_exceptions.py  test_backend_tasks.py  test_config.py  test_logging_setup.py  test_oauth.py  test_openapi.py  test_retry.py  test_server.py  test_stdio_runner.py  test_tools_artifacts.py  test_tools_common.py  test_tools_compat.py  test_tools_core.py  test_tools_language.py
