[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "notebooklm-mcp-pro"
version = "1.0.12"
description = "Production-grade MCP server for Google NotebookLM - stdio, Streamable HTTP, Claude.ai, and ChatGPT integration."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{ name = "oaslananka", email = "oaslananka@users.noreply.github.com" }]
maintainers = [{ name = "oaslananka", email = "oaslananka@users.noreply.github.com" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "notebooklm",
  "fastmcp",
  "notebooklm-py",
  "claude",
  "chatgpt",
  "openai",
  "llm-tools",
  "google-notebooklm",
  "ai-tools",
  "podcast-generation",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Typing :: Typed",
]
dependencies = [
  "aiosqlite>=0.20",
  "authlib>=1.3",
  "cryptography>=43",
  "fastmcp>=3.2,<4.0",
  "httpx>=0.27",
  "mcp>=1.27,<2.0",
  "notebooklm-py>=0.4,<0.5",
  "playwright>=1.45",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "starlette>=0.37",
  "structlog>=24.1",
  "tenacity>=9",
  "rich>=13.9",
  "shellingham>=1.5",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
browser = ["playwright>=1.45"]
all = [
  "notebooklm-mcp-pro[redis]",
  "notebooklm-mcp-pro[browser]",
]
dev = [
  "bandit[toml]>=1.8",
  "bandit-sarif-formatter>=1.1",
  "build>=1.2",
  "cyclonedx-bom>=6.0",
  "freezegun>=1.5",
  "hypothesis>=6.100",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
  "mypy>=1.11",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-httpx>=0.30",
  "respx>=0.21",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/oaslananka/notebooklm-mcp-pro"
Repository = "https://github.com/oaslananka/notebooklm-mcp-pro"
Issues = "https://github.com/oaslananka/notebooklm-mcp-pro/issues"
Changelog = "https://github.com/oaslananka/notebooklm-mcp-pro/blob/main/CHANGELOG.md"
Documentation = "https://oaslananka.github.io/notebooklm-mcp-pro/"

[project.scripts]
nlm-mcp = "nlm_mcp.cli:app"
notebooklm-mcp-pro = "nlm_mcp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/nlm_mcp"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/deploy",
  "/scripts",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL", "RUF", "S"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
mypy_path = ["src", "stubs"]

[[tool.mypy.overrides]]
module = ["notebooklm", "notebooklm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers -m 'not e2e' --cov=src/nlm_mcp --cov-report=term-missing --cov-report=xml --cov-fail-under=92"
testpaths = ["tests"]
markers = [
  "e2e: tests that require live NotebookLM credentials and network access",
]

[tool.coverage.run]
branch = true
source = ["src/nlm_mcp"]

[tool.coverage.report]
show_missing = true
skip_covered = true
